--- a/src/App.css
+++ b/src/App.css
@@ -8,36 +8,8 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-.container {
-  width: 100%;
-  max-width: 960px;
-  margin: 0 auto;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.banner {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.banner img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
 h1 {
   font-family: 'Pacifico', cursive;
-}
-
-.count {
-  font-size: 2rem;
-  font-weight: 700;
-}
-
-.cost {
-  font-weight: 300;
 }
 
 button {
@@ -50,14 +22,17 @@ button {
 }
 
 .img-nft {
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
+  margin: 8px;
 }
 
 .user-NFT, .contract-NFT {
   width: 400px;
   height: 400px;
   background: lightgray;
+  display: flex;
+  justify-content: center;
 }
 
 .contract-NFT {
