--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ h1 {
 button {
   background: rgb(255, 217, 0);
   padding: 1rem 2rem;
-  border-radius: 20px;
+  border-radius: 10px;
   font-weight: 700;
   border: 0;
   cursor: pointer;
@@ -25,6 +25,12 @@ button {
   width: 100px;
   height: 100px;
   margin: 8px;
+  border-radius: 5px;
+}
+
+.img-nft:hover {
+  transform: scale(1.1, 1.1);
+  cursor: pointer;
 }
 
 .user-NFT, .contract-NFT {
@@ -33,10 +39,12 @@ button {
   background: lightgray;
   display: flex;
   justify-content: center;
+  border-radius: 10px;
+  border: 1px solid black;
 }
 
 .contract-NFT {
-  background: lightblue;
+  background: lightgray;
   margin-left: 50px;
 }
 
@@ -70,11 +78,33 @@ button {
 .info-card1, .info-card2 {
   width: 400px;
   height: 50px;
-  background: lightcoral;
+  background: lightgray;
   margin-bottom: 20px;
   margin-top: 5%;
+  border-radius: 10px;
+  border: 1px solid black;
 }
 
 .info-card2 {
+  margin-left: 50px;
+}
+
+.inside-info {
+  margin-left: 10px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+}
+
+.range-two, .range-one {
+  width: 400px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.range-two {
   margin-left: 50px;
 }
