--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@ html {
 
 body {
   font-family: 'Roboto', sans-serif;
+  background-image:url("./img/pokemon-bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left -1%;
 }
 
 h1 {
@@ -14,8 +18,9 @@ h1 {
 
 button {
   background: rgb(255, 217, 0);
-  padding: 1rem 2rem;
-  border-radius: 10px;
+  border-radius: 5px;
+  height: 40px;
+  width: 100px;
   font-weight: 700;
   border: 0;
   cursor: pointer;
@@ -25,6 +30,7 @@ button {
   width: 100px;
   height: 100px;
   margin: 8px;
+  margin-top: 15px;
   border-radius: 5px;
 }
 
@@ -35,33 +41,40 @@ button {
 
 .user-NFT, .contract-NFT {
   width: 400px;
-  height: 400px;
+  height: 550px;
   background: lightgray;
   display: flex;
   justify-content: center;
   border-radius: 10px;
-  border: 1px solid black;
+  background: rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(3px);
+
 }
 
 .contract-NFT {
   background: lightgray;
   margin-left: 50px;
+  background: rgba(0, 0, 0, 0.1);
+
+
 }
 
 .card-container {
   display: flex;
   justify-content: center;
+
 }
 
 .connected {
-  height: 30px;
-  width: 100px;
+  height: 35px;
+  width: 150px;
   background: orange;
   border-radius: 5px;
   color: white;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-weight: bold;
 }
 
 .header {
@@ -82,7 +95,8 @@ button {
   margin-bottom: 20px;
   margin-top: 5%;
   border-radius: 10px;
-  border: 1px solid black;
+  background: rgba(0, 0, 0, 0.1);
+
 }
 
 .info-card2 {
@@ -110,6 +124,12 @@ button {
 }
 
 .selected {
-  border: 3px solid rgb(76, 0, 255);
+  border: 4px solid rgba(135,206,235,0.8);
   border-radius: 5px;
+}
+
+.icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 3px;
 }
