--- a/src/MintNFT.css
+++ b/src/MintNFT.css
@@ -1,19 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@100;300;400;700&display=swap');
 
-.App {
-  text-align: center;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 html {
   font-size: 16px;
 }
 
 body {
   font-family: 'Roboto', sans-serif;
+  background-image: none;
 }
 
 .container {
@@ -46,13 +39,4 @@ h1 {
 
 .cost {
   font-weight: 300;
-}
-
-button {
-  background: rgb(255, 217, 0);
-  padding: 1rem 2rem;
-  border-radius: 20px;
-  font-weight: 700;
-  border: 0;
-  cursor: pointer;
 }
