--- a/src/StakingNFT.css
+++ b/src/StakingNFT.css
@@ -4,7 +4,7 @@ html {
   font-size: 16px;
 }
 
-.Staking {
+.bg {
   font-family: 'Roboto', sans-serif;
   background-image:url("./img/pokemon-bg.jpg");
   background-repeat: no-repeat;
@@ -78,12 +78,6 @@ button {
   font-weight: bold;
 }
 
-.header {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
 .info-container {
   display: flex;
   justify-content: center;
@@ -133,4 +127,14 @@ button {
   width: 20px;
   height: 20px;
   margin-right: 3px;
+}
+
+.top {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.connected, .notconnected {
+  margin-right: 100px;
+  margin-top: 20px;
 }
