--- a/src/MintNFT.css
+++ b/src/MintNFT.css
@@ -1,20 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@100;300;400;700&display=swap');
 
-html {
-  font-size: 16px;
-}
-
-body {
-  font-family: 'Roboto', sans-serif;
-  background-image: none;
-}
-
 .container {
-  width: 100%;
-  max-width: 960px;
-  margin: 0 auto;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
+
 }
 
 h1 {
