--- a/src/MintNFT.css
+++ b/src/MintNFT.css
@@ -19,7 +19,7 @@ h1 {
   text-align: center;
 }
 
-.cost {
+.cost, .nc {
   font-weight: bold;
   text-align: center;
 }
@@ -43,6 +43,13 @@ h1 {
 .mint-info {
   background: rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(3px);
+  padding: 15px;
+  border-radius: 10px;
+}
+
+.error {
+  font-weight: bold;
+  background: red;
   padding: 15px;
   border-radius: 10px;
 
